<resources>
    <string name="app_name">Good Times</string>
    <string name="create_new_alert">Create new alert</string>
    <string name="analog_digital">Analog /\nDigital</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starting_from">Starting from:</string>
    <string name="select_date">Select Date</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="when">When?</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="which_days">Which days?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repeating">Repeating?</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="next_alert">Next alert: </string>
</resources>